third_party/move/move-compiler/tests/move_check/parser/invalid_call_lhs_parens_around_name.exp
error[E02004]: invalid 'module' declaration
  ┌─ tests/move_check/parser/invalid_call_lhs_parens_around_name.move:1:8
  │
1 │ module M {
  │        ^ Invalid module declaration. The module does not have a specified address. Either declare it inside of an 'address <address> {' block or declare it with an address 'module <address>::M''

error[E03009]: unbound variable
  ┌─ tests/move_check/parser/invalid_call_lhs_parens_around_name.move:3:10
  │
3 │         (foo)()
  │          ^^^ Invalid function usage. Unbound variable 'foo'

